Update with aws_rds and aws_ec2 ansible inventory modules

--- a/fitcycle_ansible_with_rds/roles/api/templates/mysql.env.j2
+++ b/fitcycle_ansible_with_rds/roles/api/templates/mysql.env.j2
@@ -2,4 +2,4 @@
 
 export MYSQL_ID='{{db_user}}'
 export MYSQL_PASSWORD='{{db_password}}'
-export MYSQL_SERVER='{{ hostvars[groups['tag_Tier_DB'][0]].ec2__address}}'
+export MYSQL_SERVER='{{ hostvars[groups['DB'][0]].endpoint.address}}'
