Update Ansible and Terraform templates

--- a/fitcycle_ansible/roles/api/templates/mysql.env.j2
+++ b/fitcycle_ansible/roles/api/templates/mysql.env.j2
@@ -2,4 +2,4 @@
 
 export MYSQL_ID='{{db_user}}'
 export MYSQL_PASSWORD='{{db_password}}'
-export MYSQL_SERVER='{{ hostvars[groups['tag_Tier_DBLB'][0]].ec2_private_ip_address }}'
+export MYSQL_SERVER='{{ hostvars[groups['DBLB'][0]].private_ip_address }}'
